--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - @SiteOptions.Value.AppName</title>.
+    <title>@ViewData["Title"] - @SiteOptions.Value.AppName</title>
     <meta name="description" content="@SiteOptions.Value.Description"/>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_2974461_sdshp7jo1jj.css"/>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_3180954_chol8bk1q14.css"/>
-    <link rel="stylesheet" href="/css/index.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="/css/index.css" asp-append-version="true" />
     <link rel="icon" href="/images/favicon.png" asp-append-version="true"/>
     <script>
         var _hmt = _hmt || [];
