--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using Dotnet9.Web.ViewModel.Categories
 @using Dotnet9.Web.Service.Links
 @using Dotnet9.Web.ViewModel.Links
+@using Dotnet9.WebAPI.ViewModel.BlogPosts
 @namespace Dotnet9.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
