--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
@@ -1,17 +1,26 @@
 ﻿@inject IOptionsSnapshot<SiteOptions> SiteOptions
 @inject ICategoryService CategoryService
+@inject IAlbumService AlbumService
 @inject IDistributedCacheHelper CacheHelper
 
 @{
-    const string cacheKey = "PersonalPartial";
+    const string cacheKeyForCategories = "PersonalPartial_Categories";
+    const string cacheKeyForAlbums = "PersonalPartial_Albums";
 
     async Task<List<CategoryBrief>?> GetCategoryFromDb()
     {
         return await CategoryService.GetCategoriesAsync();
     }
 
-    var categories = await CacheHelper.GetOrCreateAsync(cacheKey,
+    async Task<List<AlbumBrief>?> GetAlbumFromDb()
+    {
+        return await AlbumService.GetAlbumsAsync();
+    }
+
+    var categories = await CacheHelper.GetOrCreateAsync(cacheKeyForCategories,
         async e => await GetCategoryFromDb());
+    var albums = await CacheHelper.GetOrCreateAsync(cacheKeyForAlbums,
+        async e => await GetAlbumFromDb());
 }
 
 <div class="personal">
@@ -30,6 +39,22 @@
                 <a href="@SiteOptions.Value.Zhihu" target="_blank"> 知乎</a>
             </li>
         </ul>
+    </div>
+    <span class="gap-solid"></span>
+    <div class="personal-box">
+        <div class="personal-cteg">
+            <h2>专辑：</h2>
+            @if (albums != null)
+            {
+                @foreach (var album in albums)
+                {
+                    <div>
+                        <i class="iconfont icon-fenlei-copy"></i>
+                        <a href="/album/@album.Slug" title="@album.Description">@album.Name (@album.BlogCount)</a>
+                    </div>
+                }
+            }
+        </div>
     </div>
     <span class="gap-solid"></span>
     <div class="personal-box">
