添加站点地图；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
@@ -8,5 +8,7 @@
 @using Dotnet9.Web.Service.Links
 @using Dotnet9.Web.ViewModel.Links
 @using Dotnet9.WebAPI.ViewModel.BlogPosts
+@using Dotnet9.Web.Service.Albums
+@using Dotnet9.Web.ViewModel.Albums
 @namespace Dotnet9.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
