添加隐私政策；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
@@ -30,6 +30,7 @@
         &nbsp; | @SiteOptions.Value.Domain & @SiteOptions.Value.Owner 版权所有
         &nbsp; | <a href="@(SiteOptions.Value.BeiAnUrl)" target="_blank">@SiteOptions.Value.BeiAn</a>
         &nbsp; | <a href="/sitemap.xml" target="_blank">网站地图</a>
+        &nbsp; | <a href="/privacy" target="_blank">隐私政策</a>
     </div>
     <div>
         &nbsp; 由 .NET 7.0 强力驱动
