添加时间线；
参考代码：https://codepen.io/drygiel/pen/nwxLbN

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Donations/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Donations/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@page 
-@model DonationModel
+﻿@page "/donation"
+@model IndexModel
 @inject IOptionsSnapshot<SiteOptions> SiteOptions
 @{
     ViewData["Title"] = "网站赞助";
