--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -15,6 +15,7 @@
                 <li><a href="https://go.dotnet9.com">Go版本博客</a></li>
                 <li><a href="/archive">归档</a></li>
                 <li><a href="/donation">网站赞助</a></li>
+                <li><a href="/timeline">时间线</a></li>
                 <li><a href="/about">关于</a></li>
             </ul>
         </div>
