--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/wwwroot/css/timeline.css
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/wwwroot/css/timeline.css
@@ -1,117 +1,304 @@
-﻿@font-face {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/lato/v23/S6uyw4BMUTPHjx4wWw.ttf) format('truetype');
+﻿@import url(https://fonts.googleapis.com/css?family=Raleway:400,900);
+
+.hexa {
+    border: 0px;
+    float: left;
+    text-align: center;
+    height: 35px;
+    width: 60px;
+    font-size: 22px;
+    background: #f0f0f0;
+    color: #3c3c3c;
+    position: relative;
+    margin-top: 15px;
 }
 
-@font-face {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/raleway/v28/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCIPrQ.ttf) format('truetype');
-}
+    .hexa:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 0;
+        height: 0;
+        border-bottom: 15px solid #f0f0f0;
+        border-left: 30px solid transparent;
+        border-right: 30px solid transparent;
+        top: -15px;
+    }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body,
-html {
-    color: #2c2c2c;
-    min-width: 600px;
-    height: 100%;
-    background: white;
-    font: 400 1em "Lato";
-    -webkit-font-smoothing: antialiased;
-}
-
-#timeline {
-    padding-top: 5%;
-}
+    .hexa:after {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 0;
+        height: 0;
+        border-left: 30px solid transparent;
+        border-right: 30px solid transparent;
+        border-top: 15px solid #f0f0f0;
+        bottom: -15px;
+    }
 
 .timeline {
-    height: 100%;
+    position: relative;
+    padding: 0;
+    width: 100%;
+    margin-top: 20px;
+    list-style-type: none;
+}
+
+    .timeline:before {
+        position: absolute;
+        left: 50%;
+        top: 0;
+        content: ' ';
+        display: block;
+        width: 2px;
+        height: 100%;
+        margin-left: -1px;
+        background: rgb(213,213,213);
+        background: -moz-linear-gradient(top, rgba(213,213,213,0) 0%, rgb(213,213,213) 8%, rgb(213,213,213) 92%, rgba(213,213,213,0) 100%);
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(125,185,232,1)));
+        background: -webkit-linear-gradient(top, rgba(213,213,213,0) 0%, rgb(213,213,213) 8%, rgb(213,213,213) 92%, rgba(213,213,213,0) 100%);
+        background: -o-linear-gradient(top, rgba(213,213,213,0) 0%, rgb(213,213,213) 8%, rgb(213,213,213) 92%, rgba(213,213,213,0) 100%);
+        background: -ms-linear-gradient(top, rgba(213,213,213,0) 0%, rgb(213,213,213) 8%, rgb(213,213,213) 92%, rgba(213,213,213,0) 100%);
+        background: linear-gradient(to bottom, rgba(213,213,213,0) 0%, rgb(213,213,213) 8%, rgb(213,213,213) 92%, rgba(213,213,213,0) 100%);
+        z-index: 5;
+    }
+
+    .timeline li {
+        padding: 2em 0;
+    }
+
+    .timeline .hexa {
+        width: 16px;
+        height: 10px;
+        position: absolute;
+        background: #00c4f3;
+        z-index: 5;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        top: -30px;
+        margin-top: 0;
+    }
+
+        .timeline .hexa:before {
+            border-bottom: 4px solid #00c4f3;
+            border-left-width: 8px;
+            border-right-width: 8px;
+            top: -4px;
+        }
+
+        .timeline .hexa:after {
+            border-left-width: 8px;
+            border-right-width: 8px;
+            border-top: 4px solid #00c4f3;
+            bottom: -4px;
+        }
+
+.direction-l,
+.direction-r {
+    float: none;
+    width: 100%;
+    text-align: center;
+}
+
+.flag-wrapper {
+    text-align: center;
     position: relative;
 }
 
-    .timeline canvas {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
+.flag {
+    position: relative;
+    display: inline;
+    background: rgb(255,255,255);
+    font-weight: 600;
+    z-index: 15;
+    padding: 6px 10px;
+    text-align: left;
+    border-radius: 5px;
+}
+
+.direction-l .flag:after,
+.direction-r .flag:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: -15px;
+    height: 0;
+    width: 0;
+    margin-left: -8px;
+    border: solid transparent;
+    border-bottom-color: rgb(255,255,255);
+    border-width: 8px;
+    pointer-events: none;
+}
+
+.direction-l .flag {
+    -webkit-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
+    -moz-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
+    box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
+}
+
+.direction-r .flag {
+    -webkit-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
+    -moz-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
+}
+
+.time-wrapper {
+    display: block;
+    position: relative;
+    margin: 4px 0 0 0;
+    z-index: 14;
+    line-height: 1em;
+    vertical-align: middle;
+    color: #fff;
+}
+
+.direction-l .time-wrapper {
+    float: none;
+}
+
+.direction-r .time-wrapper {
+    float: none;
+}
+
+.time {
+    background: #00c4f3;
+    display: inline-block;
+    padding: 8px;
+}
+
+.desc {
+    position: relative;
+    margin: 1em 0 0 0;
+    padding: 1em;
+    background: rgb(254,254,254);
+    -webkit-box-shadow: 0 0 1px rgba(0,0,0,0.20);
+    -moz-box-shadow: 0 0 1px rgba(0,0,0,0.20);
+    box-shadow: 0 0 1px rgba(0,0,0,0.20);
+    z-index: 15;
+}
+
+.direction-l .desc,
+.direction-r .desc {
+    position: relative;
+    margin: 1em 1em 0 1em;
+    padding: 1em;
+    z-index: 15;
+    line-height: 1.5em;
+    text-align: left;
+}
+
+@media(min-width: 768px) {
+    .timeline {
+        width: 660px;
+        margin: 0 auto;
+        margin-top: 20px;
     }
 
-    .timeline figcaption {
-        font: 900 100% "Lato";
-        text-transform: uppercase;
-        -webkit-text-stroke: 0.25px;
-    }
+        .timeline li:after {
+            content: "";
+            display: block;
+            height: 0;
+            clear: both;
+            visibility: hidden;
+        }
 
-    .timeline h2 {
-        font: 400 400% "Raleway";
-        padding-bottom: 100px;
-        color: #b2cde9;
-    }
+        .timeline .hexa {
+            left: -28px;
+            right: auto;
+            top: 8px;
+        }
 
-    .timeline h6 {
-        color: #0090f5;
-        font: 400 80% Tahoma;
-    }
+        .timeline .direction-l .hexa {
+            left: auto;
+            right: -28px;
+        }
 
-    .timeline p,
-    .timeline ol {
-        font: 400 95% "Raleway";
-        padding: 3px 0 20px 0;
-        color: #575757;
-        text-align: justify;
-        width: 70%;
-    }
-
-    .timeline ol {
-        list-style: disc;
-        margin-top: -20px;
-        padding-left: 40px;
-    }
-
-    .timeline figure {
-        float: right;
-        width: 100%;
-    }
-
-    .timeline article {
+    .direction-l {
         position: relative;
-        width: 38%;
-        overflow: hidden;
-        margin-bottom: 100px;
+        width: 310px;
+        float: left;
+        text-align: right;
     }
 
-        .timeline article:first-of-type {
-            float: left;
-            text-align: right;
-        }
+    .direction-r {
+        position: relative;
+        width: 310px;
+        float: right;
+        text-align: left;
+    }
 
-            .timeline article:first-of-type p,
-            .timeline article:first-of-type figure {
-                float: right;
-            }
+    .flag-wrapper {
+        display: inline-block;
+    }
 
-        .timeline article:last-of-type {
-            float: right;
-        }
+    .flag {
+        font-size: 18px;
+    }
 
-            .timeline article:last-of-type h2 {
-                color: #c6e0aa;
-            }
+    .direction-l .flag:after {
+        left: auto;
+        right: -16px;
+        top: 50%;
+        margin-top: -8px;
+        border: solid transparent;
+        border-left-color: rgb(254,254,254);
+        border-width: 8px;
+    }
 
-            .timeline article:last-of-type h6,
-            .timeline article:last-of-type a {
-                color: #40aa00;
-            }
+    .direction-r .flag:after {
+        top: 50%;
+        margin-top: -8px;
+        border: solid transparent;
+        border-right-color: rgb(254,254,254);
+        border-width: 8px;
+        left: -8px;
+    }
 
-                .timeline article:last-of-type a:hover {
-                    color: #95d40d;
-                }
+    .time-wrapper {
+        display: inline;
+        vertical-align: middle;
+        margin: 0;
+    }
+
+    .direction-l .time-wrapper {
+        float: left;
+    }
+
+    .direction-r .time-wrapper {
+        float: right;
+    }
+
+    .time {
+        padding: 5px 10px;
+    }
+
+    .direction-r .desc {
+        margin: 1em 0 0 0.75em;
+    }
+}
+
+@media(min-width: 992px) {
+    .timeline {
+        width: 800px;
+        margin: 0 auto;
+        margin-top: 20px;
+    }
+
+    .direction-l {
+        position: relative;
+        width: 380px;
+        float: left;
+        text-align: right;
+    }
+
+    .direction-r {
+        position: relative;
+        width: 380px;
+        float: right;
+        text-align: left;
+    }
+}
