--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -12,11 +12,13 @@
             <ul class="header-nav">
                 <li><a href="/">首页</a></li>
                 <li><a href="/cat/dotnet">Dotnet</a></li>
-                <li><a href="https://go.dotnet9.com">Go版本博客</a></li>
+                <li><a href="https://go.dotnet9.com">Go版本</a></li>
                 <li><a href="/archive">归档</a></li>
                 <li><a href="/donation">网站赞助</a></li>
                 <li><a href="/timeline">时间线</a></li>
                 <li><a href="/about">关于</a></li>
+                <li><a href="https://github.com/dotnet9/Dotnet9/issues" target="_blank">Bug反馈</a></li>
+                <li><a href="/rss" target="_blank">Rss</a></li>
             </ul>
         </div>
         <div class="header-right">
