--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
@@ -1,32 +1,23 @@
 ﻿@inject IOptionsSnapshot<SiteOptions> SiteOptions
 @inject ICategoryService CategoryService
-@inject IAlbumService AlbumService
 @inject IDistributedCacheHelper CacheHelper
 
 @{
     const string cacheKeyForCategories = "PersonalPartial_Categories";
-    const string cacheKeyForAlbums = "PersonalPartial_Albums";
 
     async Task<List<CategoryBrief>?> GetCategoryFromDb()
     {
         return await CategoryService.GetCategoriesAsync();
     }
 
-    async Task<List<AlbumBrief>?> GetAlbumFromDb()
-    {
-        return await AlbumService.GetAlbumsAsync();
-    }
-
     var categories = await CacheHelper.GetOrCreateAsync(cacheKeyForCategories,
         async e => await GetCategoryFromDb());
-    var albums = await CacheHelper.GetOrCreateAsync(cacheKeyForAlbums,
-        async e => await GetAlbumFromDb());
 }
 
 <div class="personal">
     <div class="personal-box">
-        <img class="personal-avatar" src="@SiteOptions.Value.OwnerAvatar" alt="@SiteOptions.Value.Owner"/>
-        <h1 class="personal-name">@SiteOptions.Value.Owner</h1>
+        <img class="personal-avatar" src="@SiteOptions.Value.WechatPublic1" alt="@SiteOptions.Value.Owner"/>
+        <h1 class="personal-name">@SiteOptions.Value.WechatPublic1Name</h1>
         <p class="personal-desc">@SiteOptions.Value.OwnerDesc</p>
         <span class="gap-dashed"></span>
         <ul class="personal-action">
@@ -39,22 +30,6 @@
                 <a href="@SiteOptions.Value.Zhihu" target="_blank"> 知乎</a>
             </li>
         </ul>
-    </div>
-    <span class="gap-solid"></span>
-    <div class="personal-box">
-        <div class="personal-cteg">
-            <h2>专辑：</h2>
-            @if (albums != null)
-            {
-                @foreach (var album in albums)
-                {
-                    <div>
-                        <i class="iconfont icon-fenlei-copy"></i>
-                        <a href="/album/@album.Slug" title="@album.Description">@album.Name (@album.BlogCount)</a>
-                    </div>
-                }
-            }
-        </div>
     </div>
     <span class="gap-solid"></span>
     <div class="personal-box">
@@ -72,4 +47,6 @@
             }
         </div>
     </div>
+    <img class="personal-avatar" src="@SiteOptions.Value.WechatPublic2" alt="@SiteOptions.Value.Owner"/>
+    <h1 class="personal-name">@SiteOptions.Value.WechatPublic2Name</h1>
 </div>
