添加标签云；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -43,7 +43,15 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="/archive">归档</a>
+                    <a href="#">归档</a>
+                    <ul class="submenu">
+                        <li>
+                            <a href="/archive">归档</a>
+                        </li>
+                        <li>
+                            <a href="/tag">标签云</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="#">关于</a>
