部分页面使用简单布局，即不使用侧边栏；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Privacy.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Privacy.cshtml
@@ -2,6 +2,7 @@
 @model PrivacyModel
 @inject IOptionsSnapshot<SiteOptions> SiteOptions
 @{
+    Layout = "_SimpleLayout";
     ViewData["Title"] = "隐私政策";
 }
 
