--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Abouts/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Abouts/Index.cshtml
@@ -2,6 +2,7 @@
 @model IndexModel
 @inject IOptionsSnapshot<SiteOptions> SiteOptions
 @{
+    Layout = "_SimpleLayout";
     ViewData["Title"] = "关于";
 }
 
