--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
@@ -19,7 +19,8 @@
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+            crossorigin="anonymous"></script>
     @await RenderSectionAsync("Headers", false)
 </head>
 <body>
