--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
@@ -1,42 +1,39 @@
 ﻿@inject IOptionsSnapshot<SiteOptions> SiteOptions
-@inject ILinkService LinkService
-@inject IDistributedCacheHelper CacheHelper
 
-@{
-    const string cacheKey = "FooterPartial";
-
-    async Task<List<LinkBrief>?> GetLinkFromDb()
-    {
-        return await LinkService.GetListAsync();
-    }
-
-    var links = await CacheHelper.GetOrCreateAsync(cacheKey,
-        async e => await GetLinkFromDb());
-}
 
 <footer>
-    <div style="margin: 0 30px;">
-        友情链接：&nbsp;
-        @if (links is {Count: > 0 })
-        {
-            foreach (var link in links)
-            {
-                <span><a href="@link.Url" target="_blank" title="@link.Description">@link.Name</a>&nbsp;|&nbsp;</span>
-            }
-        }
-    </div>
-    <div>
-        Copyright © @(SiteOptions.Value.Start)-@(DateTime.Now.Year) &nbsp;
-        &nbsp; | @SiteOptions.Value.Domain & @SiteOptions.Value.Owner 版权所有
-        &nbsp; | <a href="@(SiteOptions.Value.BeiAnUrl)" target="_blank">@SiteOptions.Value.BeiAn</a>
-        &nbsp; | <a href="/sitemap.xml" target="_blank">网站地图</a>
-        &nbsp; | <a href="/privacy" target="_blank">隐私政策</a>
-    </div>
-    <div>
-        &nbsp; 由 .NET 7.0 强力驱动
-        &nbsp; | <a href="@SiteOptions.Value.Github" target="_blank">Github</a>
-        &nbsp; | 前台&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/razor-pages/?view=aspnetcore-7.0&tabs=visual-studio" target="_blank">Razor Pages</a>
-        &nbsp; | 后端&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/web-api/?view=aspnetcore-7.0" target="_blank">.NET Web API</a>
-        &nbsp; | 后台前端&nbsp;<a href="https://pro.ant.design/" target="_blank">Ant Design Pro</a>
+    <div class="footer box">
+        <div class="wxbox">
+            <ul>
+                <li>
+                    <img src="@SiteOptions.Value.WechatPublic1" alt="@SiteOptions.Value.WechatPublic1Name"><span>@SiteOptions.Value.WechatPublic1Name</span>
+                </li>
+                <li>
+                    <img src="@SiteOptions.Value.WechatPublic2" alt="@SiteOptions.Value.WechatPublic2Name"><span>@SiteOptions.Value.WechatPublic2Name</span>
+                </li>
+                <li>
+                    <img src="@SiteOptions.Value.OwnerWechat" alt="@SiteOptions.Value.Owner"><span>我的微信</span>
+                </li>
+            </ul>
+        </div>
+        <div class="endnav">
+            <p>
+                <b>站点声明：</b>
+            </p>
+            <p>
+                &nbsp; 2019~@DateTimeOffset.Now.Year © <a href="@SiteOptions.Value.Domain">@SiteOptions.Value.Domain</a> & @SiteOptions.Value.Owner 版权所有
+                &nbsp; | <a href="@SiteOptions.Value.BeiAnUrl" target="_blank" rel="nofollow noopener">@SiteOptions.Value.BeiAn</a>
+                &nbsp; | <a href="/sitemap.xml" target="_blank">网站地图</a>
+                &nbsp; | <a href="/privacy" target="_blank">隐私政策</a>
+            </p>
+
+            <p>
+                &nbsp; 由 .NET 7.0 强力驱动
+                &nbsp; | <a href="@SiteOptions.Value.Github" target="_blank">Github</a>
+                &nbsp; | 前台&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/razor-pages/?view=aspnetcore-7.0&tabs=visual-studio" target="_blank">Razor Pages</a>
+                &nbsp; | 后端&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/web-api/?view=aspnetcore-7.0" target="_blank">.NET Web API</a>
+                &nbsp; | 后台前端&nbsp;<a href="https://pro.ant.design/" target="_blank">Ant Design Pro</a>
+            </p>
+        </div>
     </div>
 </footer>
