恢复工具栏；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
     @RenderBody()
 </article>
 @await Html.PartialAsync("_FooterPartial")
+@await Html.PartialAsync("_ToolbarPartial")
+
 <script src="js/jquery-1.8.3.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/index.js"></script>
